<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_writing"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_writing" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/nav_statistics" />
        <item
            android:id="@+id/nav_benefits"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_benefits" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/nav_feedback" />
        </menu>
    </item>
</menu>
